Fix speech on iOS.

--- a/style.scss
+++ b/style.scss
@@ -487,13 +487,13 @@ h2 {
         padding-bottom: 0.25em;
     }
     select {
-        width: 10em;;
+        width: 15em;;
         display: block;
     }
     input {
         margin-top: 1em;
         display: block;
-        width: 10em;
+        width: 15em;
         &[type=submit] {
           @include decoratedButton(0.1em, #61A0B3, 0.5em, 0, $carolinaBlue, #286DA3, 1.1em, 0.1em, 1em, #EEE, #81BEF0, #FFF, 0, 10em);
         }
